@@ -1,3 +1,8 @@
+2011-08-27  server  <geniv.radek@gmail.com>
+
+ * vylepseni metody Imagic->__construct aby se dali parametry zadat jak pres text a nebo jako asociativni pole
+
+
 2011-08-24  server  <geniv.radek@gmail.com>
 
  * nahrazeni metody: getImageSize (deprecated) na getImageLength
